--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,9 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 hibernate.show_sql: true
+
+
+security.secret=erytqcvsbaojhqfciBCOIBV898Ydudkjbcd
+security.prefix='Bearer '
+security.param=Authorization
+
