--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.datasource.url=jdbc:postgresql://localhost:6000/gestioneordini
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-hibernate.show_sql: true
+server.port = 8090
