gestione e inserimento degli ordini

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,11 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 hibernate.show_sql: true
 
 
-security.secret=erytqcvsbaojhqfciBCOIBV898Ydudkjbcd
+security.secret=zdtlD3JK56m6wTTgsNFhqzjqP
 security.prefix='Bearer '
 security.param=Authorization
 
+utils.ordiniUri=https://projectwork.gomulgame.com/WebServiceOrders.asmx/orders?refresh_token=Atzr|IwEBIPGGbogA4gJ86OciHsp16r6gXmV&CreatedAfter=2021-06-01T16:09:52.000&CreatedBefore=2021-07-31T16:09:52.000
 
 server.port = 8090
 
