giacenza improved manca ancora qualcosa

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ security.prefix='Bearer '
 security.param=Authorization
 
 utils.ordiniUri=https://projectwork.gomulgame.com/WebServiceOrders.asmx/orders?refresh_token=Atzr|IwEBIPGGbogA4gJ86OciHsp16r6gXmV&CreatedAfter=2021-06-01T16:09:52.000&CreatedBefore=2021-07-31T16:09:52.000
+utils.ordiniItems=https://projectwork.gomulgame.com/WebServiceOrders.asmx/orderitems?refresh_token=Atzr|IwEBIPGGbogA4gJ86OciHsp16r6gXmV&AmazonOrderId=
 
 server.port = 8090
 
