Filtro 1 Analisi terminato (completo di quantita oggetti venduti e ricavi totali (quantità per prezzo unitario))

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 hibernate.show_sql: true
+spring.jpa.show-sql=true
 
 
 security.secret=zdtlD3JK56m6wTTgsNFhqzjqP
