--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=postgres
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 hibernate.show_sql: true
 spring.jpa.show-sql=true
-
+#debug=true  # utile solo per il debug all'avvio
 
 security.secret=zdtlD3JK56m6wTTgsNFhqzjqP
 security.prefix='Bearer '
