--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=jdbc:postgresql://localhost:6000/gestioneordini
+spring.datasource.url=jdbc:postgresql://93.51.124.180:6000/gestioneordini
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
